--- a/IBM Data Science Professional Certificate/DataScienceTools.ipynb
+++ b/IBM Data Science Professional Certificate/DataScienceTools.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Science Tools"
+    "# Data Science Tools and Ecosystem"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, Data Science is summarize."
+    "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
   {
@@ -83,23 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "3.3333333333333335"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert 120 minutes to hours\n",
-    "120/60"
+    "200/60"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "source": [
     "## Author\n",
-    "### Karl Mbouombouo"
+    "Karl Mbouombouo"
    ]
   }
  ],
